# shielva-connectors

./: .gitignore  README.md  connector.py  exceptions.py  implementation_plan.md  models.py  requirements.txt  stepper_progress.json  test_guidelines.md
core/: .dockerignore  .pyre_configuration  .shielva-ci.yml  .trivyignore  Dockerfile  README.md  build_artifact.py  connectors-requirements.txt  gateway.py  pyproject.toml  requirements.txt  ruff.toml  run_test_generation.py  seed_integration_to_prod.py  shielva_connectors.json
core/integration/: create_r2_bucket.py  main.py
core/integration/api/: catalog_routes.py  catalog_v3_routes.py  categories_routes.py  codegen_routes.py  codeview_routes.py  connector_api_routes.py  docs_routes.py  entity_routes.py  guidelines_routes.py  history_routes.py  instructions_routes.py  knowledge_routes.py  logs_routes.py  models_routes.py  planning_routes.py  prompt_steps_routes.py  session_routes.py  step_prompts_routes.py  sync_request_routes.py  sync_webhook_routes.py  system_routes.py  terminal_routes.py  testing_routes.py  ws_routes.py
core/integration/core/: config.py  error_handlers.py  errors.py
core/integration/data/: catalog.py  connector_catalog.json
core/integration/db/: database.py
core/platform_default/: __init__.py
core/services/: __init__.py  connector_catalog.py  connector_store.py  credentials.py  encryption.py  key_manager.py  models.py  redis_service.py  scheduler.py  test_encryption.py
core/shared/: base_connector.py  oauth_handler.py  repository_service.py
core/tests/: test_generate_workflow.py
(+3053 files in other folders)
